src/css/popup.css
body {
	/* display: none; */
	width: 320px;
	min-width: 320px;
	/* height: 480px; */
	/* min-height: 70px; */
	max-height: calc((28px + 1px) * 16);
	color: black;
	font: 12px/16px Sans-serif, 'Helvetica Neue', Helvetica, Arial, Sans-serif;
	overflow: hidden;
	padding: 0;
	margin: 0 2px;
	-webkit-user-select: none;
	cursor: default;
	/* transition: height 0.3s; */
}

body.dynamic {
}

body.full {
	height: calc((28px + 1px) * 16);
}

body.short ul li {
	width: calc(100% - 20px - 34px);
}

section {
	position: relative;
	top: 0px;
	width: 100%;
	/* max-height: 100%; */
	height: 100%;
	max-height: calc((28px + 1px) * 16);
	overflow-x: hidden;
	overflow-y: auto;
}

	section::-webkit-scrollbar {
		-webkit-appearance: none;
		position: absolute;
		width: 6px;
	}

	section::-webkit-scrollbar-thumb {
		border-radius: 0;
		background-color: #aaa;
		border-radius: 4px;
	}

	section::-webkit-scrollbar-track {
		border-radius: 0;
		background-color: transparent;
	}

fieldset {
	padding: 0;
	margin: 0;
	border: 0;
	max-width: 100%;
	overflow: hidden;
	/*border-top: 1px solid #ccc;*/
}

fieldset:first-child {
	/* margin-top: 4px; */
}

	fieldset legend {
		width: calc(100% - 2px);
		position: relative;
		padding: 0;
	    color: white;
		background-color: black;
		border-radius: 6px;
	}

	fieldset legend:before {
		z-index: 50;
		position: absolute;
		left: 10px;
		left: 6px;
		top: 16px;
		width: calc(100% - 10px - 12px - 24px - 32px);
		width: calc(100% - 6px - 24px);
		width: 20px;
		height: 1px;
		background-color: #ccc;
		background-color: transparent;
		/* border-top: 1px solid white; */
		/* content: ''; */
	}

	fieldset.focused legend {
		/* color: white; */
		/* background-color: #333; */
	}

	fieldset.minimized legend {
		/*color: #eee;*/
		/*background-color: #555;*/
	}

	fieldset legend span {
		/* padding-left: 6px; */
		width: 32px;
		z-index: 50;
		display: inline-block;
		vertical-align: top;
		padding: 0 8px;
		padding-top: 2px;
		padding-left: 12px;
	    font-size: 14px;
	    font-weight: 600;
		line-height: 28px;
		text-align: center;
		padding: 0;
		/* border-radius: 3px; */
	}

	fieldset legend label {
		z-index: 100;
		position: absolute;
		right: 10px;
		display: inline-block;
		z-index: 100;
		color: #e0e0e0;
		font-size: 12px;
		line-height: 28px;
		font-weight: 500;
	}

	fieldset legend label b {
		font-weight: inherit;
	}

		fieldset legend span em {
		    /* opacity: .5; */
		}


ul {
	width: calc(320px - 6px - 2px);
	list-style: none;
	padding: 0;
	margin: 0;
}

	ul:last-child {
		margin-bottom: 0;
	}

	fieldset.minimized ul {
		/*margin: 0;*/
	}

	ul li {
		width: calc(100% - 34px);
		color: #333;
		position: relative;
		padding: 1px 0 1px 34px;
		margin: 1px 0 1px 0;
		border-radius: 6px;
		overflow: hidden;
		transition: padding 0.2s;
	}

	ul li.removed {
		padding-top: 0px;
		padding-bottom: 0px;
	}

		ul li.removed p {
			line-height: 0px;
			padding: 0;
		}

	ul li:hover {
		color: white;
		background-color: #3366ff !important;
		cursor: pointer;
	}

	ul li:active {
		color: white;
		background-color: #3366ff !important;
		cursor: pointer;
	}

		ul li:hover p i, ul li:hover p b
		ul li:active p i, ul li:active p b {
			color: white !important;
			opacity: 1;
		}

		ul li:hover p i, ul li:active p i {
			opacity: 0.8;
		}

		ul li:hover img {
			opacity: 1;
		}

		ul li:hover p i
		ul li:active p i {
			color: black !important;
			/* opacity: .5; */
		}

	ul li:active {
		background-color: #aaa;
	}

		ul li img {
			position: absolute;
			top: 6px;
			left: 8px;
			width: 16px;
			height: 16px;
		}

			ul li:hover img,
			ul li:active img {
				opacity: 1 !important;
				filter: none !important;
			}

		fieldset:not(.focused) ul li img,
		fieldset ul li:not(.active) img {
			opacity: 1;
			/* filter: grayscale(1); */
		}

		ul li .close {
			z-index: 10;
			position: absolute;
			top: 0px;
			right: 0px;
			width: 28px;
			height: 28px;
			font-size: 18px;
			line-height: 26px;
			color: white;
			font-weight: 100;
			background-color: transparent;
			text-align: center;
			opacity: 0;
			border-radius: 6px;
			border-top-right-radius: 0;
			border-bottom-right-radius: 0;
		}

			ul li .close:hover {
				color: white;
				background-color: #ff0033 !important;
			}

			ul li:hover .close,
			ul li:active .close {
				opacity: 1;
			}

		ul li p {
			font-size: 13.5px;
			line-height: 22px;
			width: calc(100% - 10px);
			margin: 0;
			padding: 2px 0;
			overflow: hidden;
			white-space: nowrap;
			text-overflow: ellipsis;
			font-family: Sans-serif;
			font-weight: 100;
			letter-spacing: -.010em;
			transition: line-height 0.3s, padding 0.3s;
		}

		ul li:hover p,
		ul li:active p {
			color: inherit;
			width: calc(100% - 32px);
		}

		.focused ul li.active p {
			color: inherit;
		}

			ul li p b {
				color: inherit;
				font-weight: 500
			}

			ul li p i {
				font-style: normal;
				font-weight: 500
			}

		ul li.no-avail p {
			color: #aaa;
			/*font-size: 11px;*/
		}

			ul li:hover:not(.active) .url,
			ul li:active:not(.active) .url {
				xdisplay: block;
				color: white !important;
			}

	fieldset.focused ul li.active {
		background-color: #ccc; /* 3366ff */
	}

		fieldset.focused ul li.active p b {
			/* opacity: 0.95; */
		}

		fieldset.focused ul li.active p i {
			/* color: white !important; */
			opacity: 0.75;
		}

	fieldset.minimized ul li {
		/*color: #777;*/
	}

		fieldset.minimized ul li .url {
			/*color: #bbbbbb;*/
		}

